--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/moviedate?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Pass123word$
+spring.sql.init.mode=always
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.defer-datasource-initialization=true
